# xed-vala-plugin

./: .gitignore  README.md  meson.build  run.sh
data/: meson.build  valaplugin-plugin.desktop.in
po/: POTFILES  en.po  it.po  meson.build
src/: meson.build  vala-plugin.vala
vapi/: xed.vapi
